A simple page with the sweet new logo

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>OpenWrap</title>
+        <style type="text/css">
+            body { font-family: Arial, Sans-Serif; }
+        </style>
+    </head>
+    <body>
+        <div id="wrap" style="text-align: center">
+            <p>
+                <img src="logo-huge.jpg" alt="OpenWrap Logo"/>
+            </p>
+            <p>
+                Coming soon, a package manager for .net
+            </p>
+            <p>
+                More info at <a href="http://github.com/openrasta/openwrap">github.com/openrasta/openwrap</a>
+            </p>
+        </div>
+    </body>
+</html>
