Add other pages and navigation.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
             </p>
             <p>There is a <a href="http://github.com/openrasta/openwrap/wiki">wiki</a> at GitHub. You should probably <a href="http://twitter.com/serialseb">follow seb on twitter</a> as well!</p>
         </div>
+        <ul id="nav">
+            <li class="current"><a href="index.html">Home</a></li>
+            <li><a href="get-started.html">Get Started</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="credits.html">Credits</a></li>
+        </ul>
         <div id="side">
             <div id="download">
-                <a class="install" href="#">Install OpenWrap</a>
+                <a class="install" href="o.zip">Install OpenWrap</a>
             </div>
             <p>
                 Fork the code, read the wiki and report bugs at <a href="http://github.com/openrasta/openwrap">
@@ -50,12 +56,6 @@
             </p>
             <p>
                 OpenWrap is free, open source software (MIT License).</p>
-            <p>
-                It is primarily written and maintained by <a href="http://twitter.com/serialseb">Sebastien
-                    Lambla</a>, with help from <a href="http://twitter.com/andrewdavey">Andrew Davey</a>,
-                <a href="http://github.com/DanielIrvine">Daniel Irvine</a>, <a href="http://twitter.com/ryansroberts">
-                    Ryan Roberts</a> and <a href="http://github.com/trullock">trullock</a>.
-            </p>
         </div>
         <div id="footer">
             &copy; 2007-2009 Caffeine IT & naughtyProd Ltd (http://www.caffeine-it.com)</div>
