Clean up sidebar text

--- a/about.html
+++ b/about.html
@@ -26,8 +26,7 @@
                 <a class="install" href="o.zip">Install OpenWrap</a>
             </div>
             <p>
-                Fork the code, read the wiki and report bugs at 
-                <a href="http://github.com/openrasta/openwrap">OpenWrap on GitHub</a>
+                Fork the code, read the wiki and report bugs at <a href="http://github.com/openrasta/openwrap">GitHub</a>
             </p>
             <p>
                 OpenWrap is free, open source software (MIT License).</p>
