--- a/credits.html
+++ b/credits.html
@@ -23,6 +23,7 @@
             </p>
             <p>See the <a href="http://github.com/openrasta/openwrap/contributors">contributor list</a> for more information.</p>
             <p>Thanks to 'Mrs. @kkozmic' for designing the OpenWrap logo.</p>
+            <p>Website by Andrew Davey.</p>
         </div>
         <ul id="nav">
             <li><a href="index.html">Home</a></li>
@@ -35,8 +36,7 @@
                 <a class="install" href="o.zip">Install OpenWrap</a>
             </div>
             <p>
-                Fork the code, read the wiki and report bugs at <a href="http://github.com/openrasta/openwrap">
-                    OpenWrap on GitHub</a>
+                Fork the code, read the wiki and report bugs at <a href="http://github.com/openrasta/openwrap">GitHub</a>
             </p>
             <p>
                 OpenWrap is free, open source software (MIT License).</p>
