updating credits for the logo

--- a/credits.html
+++ b/credits.html
@@ -22,7 +22,7 @@
                 <a href="http://github.com/trullock">trullock</a>.
             </p>
             <p>See the <a href="http://github.com/openrasta/openwrap/contributors">contributor list</a> for more information.</p>
-            <p>Thanks to 'Mrs. @kkozmic' for designing the OpenWrap logo.</p>
+            <p>The logo and color scheme are the creation of Agnieszka Kozmic (agnieszka.kozmic@gmail.com).</p>
             <p>Website by Andrew Davey.</p>
         </div>
         <ul id="nav">
