updating console executable and links

--- a/get-started.html
+++ b/get-started.html
@@ -13,7 +13,7 @@
             <h1>Get Started with OpenWrap</h1>
             <p>Follow these steps and you'll be wraped up in minutes!</p>
             <ol>
-                <li>Download and extract the <a href="o.zip">OpenWrap console</a></li>
+                <li>Download and extract the <a href="o.exe">OpenWrap console</a></li>
                 <li>Run <code>o.exe</code></li>
                 <li>When prompted, type <code>i</code> to install OpenWrap into your path.</li>
             </ol>
