--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </ul>
         <div id="side">
             <div id="download">
-                <a class="install" href="o.zip">Install OpenWrap</a>
+                <a class="install" href="o.exe">Install OpenWrap</a>
             </div>
             <p>
                 Fork the code, read the wiki and report bugs at <a href="http://github.com/openrasta/openwrap">GitHub</a>
