--- a/credits.html
+++ b/credits.html
@@ -1,49 +1,24 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title>OpenWrap - Package management for .NET</title>
-    <link href="http://yui.yahooapis.com/2.8.0r4/build/reset/reset-min.css" rel="stylesheet" type="text/css" />
-    <link href="site.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-    <div id="wrap">
-        <div id="header">
-        </div>
-        <div id="main">
-            <h1>Credits</h1>
-            <p>
-                OpenWrap primarily written and maintained by <a href="http://twitter.com/serialseb">Sebastien
-                    Lambla</a>.
-            </p>
-            <p>Help is provided by 
-                <a href="http://twitter.com/andrewdavey">Andrew Davey</a>,
-                <a href="http://github.com/DanielIrvine">Daniel Irvine</a>, 
-                <a href="http://twitter.com/ryansroberts">Ryan Roberts</a> and 
-                <a href="http://github.com/trullock">trullock</a>.
-            </p>
-            <p>See the <a href="http://github.com/openrasta/openwrap/contributors">contributor list</a> for more information.</p>
-            <p>The logo and color scheme are the creation of Agnieszka Kozmic (agnieszka.kozmic@gmail.com).</p>
-            <p>Website by Andrew Davey.</p>
-        </div>
-        <ul id="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="get-started.html">Get Started</a></li>
-            <li><a href="about.html">About</a></li>
-            <li class="current"><a href="credits.html">Credits</a></li>
-        </ul>
-        <div id="side">
-            <div id="download">
-                <a class="install" href="o.exe">Install OpenWrap</a>
-            </div>
-            <p>
-                Fork the code, read the wiki and report bugs at <a href="http://github.com/openrasta/openwrap">GitHub</a>
-            </p>
-            <p>
-                OpenWrap is free, open source software (MIT License).</p>
-            
-        </div>
-        <div id="footer">
-            &copy; 2007-2009 Caffeine IT & naughtyProd Ltd (http://www.caffeine-it.com)</div>
-    </div>
-</body>
-</html>
+---
+title: OpenWrap - Credits
+layout: basic
+---
+<h1>Credits</h1>
+
+<p>
+  OpenWrap primarily written and maintained by <a href="http://twitter.com/serialseb">Sebastien Lambla</a>.
+</p>
+
+<p>
+  Help is provided by <a href="http://twitter.com/andrewdavey">Andrew Davey</a>, <a href="http://github.com/DanielIrvine">Daniel
+    Irvine</a>, <a href="http://twitter.com/ryansroberts">Ryan Roberts</a> and <a href="http://github.com/trullock">trullock</a>.
+</p>
+
+<p>
+  See the <a href="http://github.com/openrasta/openwrap/contributors">contributor list</a> for more information.</p>
+
+<p>
+  The logo and color scheme are the creation of Agnieszka Kozmic (agnieszka.kozmic@gmail.com).</p>
+
+<p>
+  Website by Andrew Davey.</p>
+
