Updating logo and texts, added widgets, updated color schemes, corrects some IE bugs.

--- a/about.html
+++ b/about.html
@@ -2,8 +2,10 @@
 title: OpenWrap - About
 layout: basic
 ---
-            <h1>About OpenWrap</h1>
-            <p>Seb, the creator of OpenWrap, has written a number of blog posts about the project on his <a href="http://codebetter.com/blogs/sebastien_lambla/default.aspx">Blog at CodeBetter</a>.</p>
-            <p>Watch Seb talking about OpenWrap in this <a href="http://vimeo.com/14570246">video</a>.</p>
-            <p>See the code, wiki, etc at <a href="http://github.com/openrasta/openwrap">GitHub</a></p>
- 
+            <h1>OpenWrap's history</h1>
+            <p>OpenWrap was created to fullfill a need the OpenRasta project has for package-based plugin deployment.</p>
+            <p>The first archeological trace our team is aware of is a message on the OpenRasta mailing list dating back to <a href="http://groups.google.com/group/openrasta/browse_thread/thread/edc947964041c05b/33b2465240fbd8df?lnk=gst&q=plugin#33b2465240fbd8df">October 2009</a>.</p>
+            <p>Once the path was laid out, the original architects of OpenWrap city started laying plans and doing demos, and started construction. During a lavish celebration to the god of creation Amun, the first artifacts were released to the willing population. Carbon 14 dating reveals the surprising age of these first few stones, placing the event around <a href="https://github.com/openrasta/openwrap/commit/f7e0e7336afdf151dc990e432c2ef856ead72719">May 13, 2010</a>.</p>
+            <p>Since then, the team of builders has continued with its focus on simplicity and respect of the divine proportions to work on numerous sub releases.</p>
+            <h1>The who's who</h1>
+            <p>A partial list of the architects and builders of this grandiose tool can be found in the <a href="credits.html">Credits</a> page.</p>
