--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@ layout: basic
 </p>
 <p>
     The solution: <strong>OpenWrap</strong></p>
-<p>
-    For example, say you want to use NHibernate in your project. Simply run this at
+<p> 
+    For example, say you want to use OpenRasta in your project. Simply run this at
     the command line:</p>
 <code>
-    <pre>c:\myproject&gt; o add-wrap nhibernate</pre>
+    <pre>o add-wrap openrasta-devtools</pre>
 </code>
 <p>
-    OpenWrap will query available repositories for the NHibernate "wrap" and download
+    OpenWrap will query available repositories for the OpenRasta "wrap" and download
     it along with all the necessary dependencies, such as Castle.</p>
 <p>
     Wraps are simple zip files containing the binaries, tools and other useful content.
-    They are copied into your project in an x-copy friendly manner.</p>
+    They are copied into your project in an xcopy-friendly manner.</p>
 <h2>Find out more</h2>
 <p>
     Sebastien Lambla, the creator of OpenWrap, writes about the project in his <a href="http://codebetter.com/blogs/sebastien_lambla/default.aspx">blog at CodeBetter.com</a>.
