--- a/credits.html
+++ b/credits.html
@@ -17,7 +17,7 @@ layout: basic
   See the <a href="http://github.com/openrasta/openwrap/contributors">contributor list</a> for more information.</p>
 
 <p>
-  The logo and color scheme are the creation of Agnieszka Kozmic (agnieszka.kozmic@gmail.com).</p>
+  The logo and color scheme are the creation of Agnieszka Kozmic (agnieszka.kozmic at gmail.com).</p>
 
 <p>
   Website by Andrew Davey.</p>
