Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: basic
     They are copied into your project in an xcopy-friendly manner.</p>
 <h2>Find out more</h2>
 <p>
-    Sebastien Lambla, the creator of OpenWrap, writes about the project in his <a href="http://codebetter.com/blogs/sebastien_lambla/default.aspx">blog at CodeBetter.com</a>.
+    Sebastien Lambla, the creator of OpenWrap, writes about the project in his <a href="http://codebetter.com/sebastienlambla/">blog at CodeBetter.com</a>.
 </p>
 <p>
     There is a <a href="http://github.com/openrasta/openwrap/wiki">wiki</a> at GitHub. You
